--- a/rag-agent/package.json
+++ b/rag-agent/package.json
@@ -20,20 +20,21 @@
     "@next/env": "^15.5.4",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@workflow/ai": "4.0.1-beta.6",
+    "@stackframe/stack": "^2.8.51",
+    "@workflow/ai": "4.0.1-beta.13",
     "ai": "^5.0.48",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
     "nanoid": "^5.1.6",
-    "next": "15.5.3",
+    "next": "16.0.2",
     "postgres": "^3.4.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "workflow": "4.0.1-beta.6",
+    "workflow": "4.0.1-beta.13",
     "zod": "^3.25.76"
   },
   "devDependencies": {
